[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Armadilha_bamboo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/bamboo.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/falling-bamboo.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 80.5 )

[sub_resource type="Animation" id=2]
resource_name = "Balacar_direita"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 86.7, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Balacar_esquerda"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -86.7, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Parado"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 86.7 ]
}

[node name="Armadilha_bamboo" type="Node2D"]
rotation = 1.5132
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -161.0
margin_right = 6.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -160.0
margin_right = 5.0
color = Color( 0.145098, 0.494118, 0.168627, 1 )

[node name="ColorRect3" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -2.0
margin_right = 5.0
margin_bottom = -1.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect5" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -14.0
margin_right = 5.0
margin_bottom = -13.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect7" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -26.0
margin_right = 5.0
margin_bottom = -25.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect9" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -38.0
margin_right = 5.0
margin_bottom = -37.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect11" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -50.0
margin_right = 5.0
margin_bottom = -49.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect13" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -62.0
margin_right = 5.0
margin_bottom = -61.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect15" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -74.0
margin_right = 5.0
margin_bottom = -73.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect17" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -86.0
margin_right = 5.0
margin_bottom = -85.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect19" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -98.0
margin_right = 5.0
margin_bottom = -97.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect21" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -110.0
margin_right = 5.0
margin_bottom = -109.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect23" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -122.0
margin_right = 5.0
margin_bottom = -121.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect25" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -134.0
margin_right = 5.0
margin_bottom = -133.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect27" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -146.0
margin_right = 5.0
margin_bottom = -145.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="ColorRect29" type="ColorRect" parent="Node2D"]
margin_left = -1.0
margin_top = -158.0
margin_right = 5.0
margin_bottom = -157.0
color = Color( 0.0745098, 0.372549, 0.0980392, 1 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( 2, -80.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Parado"
playback_speed = 5.0
anims/Balacar_direita = SubResource( 2 )
anims/Balacar_esquerda = SubResource( 4 )
anims/Parado = SubResource( 5 )
anims/RESET = SubResource( 3 )

[node name="Som_bamboo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0

[node name="Som_bamboo_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
